--- a/views/show.ejs
+++ b/views/show.ejs
@@ -7,6 +7,6 @@
 <body>
   <h2>Message</h2>
   <p><%= mes %></p>
-    <a href="localhost:8080/public/test.html"target=”_blank”>/public/test.htmlへのリンク</a>
+    <a href="/public/test.html">/public/test.htmlへのリンク</a>
 </body>
 </html>
